force-app/main/default/objects/vlocity_ps__ChildRollupSettings__c/vlocity_ps__ChildRollupSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Child Rollup Settings</label>
</CustomObject>