force-app/main/default/objects/vlocity_ps__ChildRollupSettings__c/fields/vlocity_ps__ChildFieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ChildFieldName__c</fullName>
    <description>ChildFieldName</description>
    <label>ChildFieldName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>