force-app/main/default/objects/vlocity_ps__ChildRollupSettings__c/fields/vlocity_ps__ChildFieldTypeValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ChildFieldTypeValue__c</fullName>
    <label>ChildFieldTypeValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>