force-app/main/default/objects/vlocity_ps__ChildRollupSettings__c/fields/vlocity_ps__ChildObjectName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ChildObjectName__c</fullName>
    <description>ChildObjectName</description>
    <label>ChildObjectName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>