force-app/main/default/objects/vlocity_ps__ChildRollupSettings__c/fields/vlocity_ps__ParentFieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentFieldName__c</fullName>
    <description>ParentFieldName</description>
    <label>ParentFieldName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>