force-app/main/default/objects/vlocity_ps__ChildRollupSettings__c/fields/vlocity_ps__ParentObjectName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentObjectName__c</fullName>
    <description>Parent Object Name</description>
    <label>ParentObjectName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>