force-app/main/default/objects/vlocity_ps__ChildRollupSettings__c/fields/vlocity_ps__RelationId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RelationId__c</fullName>
    <label>RelationId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>